# quetzalcoatl-project

./: .gitignore  README.md
archive/controller_driver/TIMv1/: hal_pwm_lld.c  hal_pwm_lld.h
archive/controller_driver/src/: usbcfg.c
controller_driver/: Makefile  README.md  project.mk
controller_driver/include/: common.h
controller_driver/src/: feedback.c  lld_control.c  pedals.c  ros.cpp
controller_driver/tests/: test_main_new.c
high_level/quetzalcoatl-project/: CMakeLists.txt
high_level/quetzalcoatl_description/: CMakeLists.txt  package.xml
high_level/quetzalcoatl_description/urdf/: robocross_22.urdf.xacro
high_level/quetzalcoatl_maps/: package.xml
high_level/quetzalcoatl_msgs/: package.xml
high_level/quetzalcoatl_software/: package.xml
high_level/scripts/: build-min.sh  build.sh
middle_level/ADC on HALL/: .mxproject  ADC on HALL.ioc
quetzalcoatl-project/: CMakeLists.txt  package.xml
quetzalcoatl_description/: CMakeLists.txt
quetzalcoatl_description/launch/: quetzalcoatl.launch
quetzalcoatl_description/urdf/: base.urdf.xacro  robocross_22.urdf.xacro
quetzalcoatl_maps/: CMakeLists.txt
quetzalcoatl_maps/worlds/: gas.world
quetzalcoatl_msgs/: CMakeLists.txt
quetzalcoatl_software/: CMakeLists.txt  package.xml
quetzalcoatl_software/scripts/: joy_ctrl.py
quetzalcoatl_vision/: CMakeLists.txt  package.xml
quetzalcoatl_vision/launch/: start_rtabmap.launch  start_rtabmap_lidar.launch  start_rtabmap_lidar_demo.launch  start_rtabmap_multi.launch
quetzalcoatl_vision/rviz/: rs_multiple_raw.rviz
scripts/: build.sh  install_packages.sh
(+67 files in other folders)
