<?xml version="1.0"?>
<package>
    <name>quetzalcoatl-project</name>
    <version>0.0.0</version>
    <description>
        The quetzalcoatl-project metapackage that installs quetzalcoatl_software and related packages.
    </description>
    <maintainer email="nlobazev@gmail.com">Nikita Lobazev</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>quetzalcoatl_description</run_depend>
    <run_depend>quetzalcoatl_maps</run_depend>
    <run_depend>quetzalcoatl_msgs</run_depend>
    <run_depend>quetzalcoatl_software</run_depend>
    <run_depend>quetzalcoatl_vision</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
