<?xml version="1.0"?>
<package format="2">

  <name>quetzalcoatl_msgs</name>
  <version>0.0.0</version>
  <description>The quetzalcoatl_msgs package</description>
  <maintainer email="alexey@todo.todo">alexey</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
